# personal-os-skills

./: .gitignore  README.md  install.sh
.claude-plugin/: marketplace.json
docs/: datadog.md  k8s-optimizer-cost.md  k8s.md  meet.md  triage-architecture.md
meet/: pyproject.toml
meet/meet/: cli.py  enhancer.py  note_creator.py  recorder.py  transcriber.py
skills/agent-reviewer/: SKILL.md
skills/capture-insights/: SKILL.md
skills/create-runbook/: SKILL.md
skills/datadog-logs-analyzer/: SKILL.md
skills/datadog-metrics-investigator/: SKILL.md
skills/datadog-report-publisher/: SKILL.md
skills/datadog-service-health/: SKILL.md
skills/datadog-triage/: SKILL.md
skills/k8s-error-analyzer/: SKILL.md
skills/k8s-optimizer-cost/: SKILL.md
skills/meet/: SKILL.md
skills/meet/raycast/: Start Meeting Recording.sh  Stop Meeting Recording.sh
skills/run/: SKILL.md
skills/second-opinion/: SKILL.md
