[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meet"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "mlx-whisper>=0.4.0",
]

[project.scripts]
meet = "meet.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["meet"]
